clusters/my-cluster/github-webhook-setup.yaml

# Loadbalancer to expose webhook receiver externally to link with github

apiVersion: v1
kind: Service
metadata:
  name: receiver-loadbalancer
  namespace: flux-system
spec:
  type: LoadBalancer
  selector:
    app: notification-controller
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9292
