clusters/my-cluster/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: receiver-loadbalancer
  namespace: catalin-flux-system
spec:
  type: LoadBalancer
  selector:
    app: notification-controller
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9292
